--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "Claus Stadler <cstadler@informatik.uni-leipzig.de>"
   ],
   "description": "UI for JAvascript Suite for Sparql Access",
-  "main": ["jassa-ui-angular-openlayers-tpls.js, jassa-ui-angular-openlayers.css"],
+  "main": ["jassa-ui-angular-openlayers-tpls.js", "jassa-ui-angular-openlayers.css"],
   "dependencies": {
     "jquery-ui": "1.10.3",
     "openlayers": "2.13.1",
