--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "jquery-ui": "1.10.3",
     "openlayers": "2.13.1",
-    "angular": ">=1",
-    "jassa": ">=0.0.1-SNAPSHOT"
+    "angular": "1.2.16-build.63+sha.8d4d437",
+    "jassa": "0.0.2-SNAPSHOT"
   },
   "keywords": [
     "rdf",
