--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
   ],
   "dependencies": {
     "jquery-ui": "1.10.3",
-    "openlayers": "2.13.1",
+    "openlayers": "release-2.13.1",
     "angular": "1.2.16-build.63+sha.8d4d437",
     "jassa": "0.0.4-SNAPSHOT"
   },
