--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "jassa-ui-angular-openlayers",
-  "version": "0.8.1",
+  "version": "0.9.0-SNAPSHOT",
   "homepage": "https://github.com/GeoKnow/Jassa-UI-Angular",
   "authors": [
     "Claus Stadler <cstadler@informatik.uni-leipzig.de>"
@@ -13,8 +13,8 @@
   "dependencies": {
     "jquery-ui": "1.10.3",
     "openlayers": "release-2.13.1",
-    "angular": "1.2.16-build.63+sha.8d4d437",
-    "jassa": "0.8.1"
+    "angular": "angular": "v1.3.5-build.3630+sha.30694c8",
+    "jassa": "0.9.0-SNAPSHOT"
   },
   "keywords": [
     "rdf",
