--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "jquery-ui": "1.10.3",
     "openlayers": "release-2.13.1",
-    "angular": "angular": "v1.3.5-build.3630+sha.30694c8",
+    "angular": "1.3.5-build.3630+sha.30694c8",
     "jassa": "0.9.0-SNAPSHOT"
   },
   "keywords": [
