--- a/bower.json
+++ b/bower.json
@@ -7,14 +7,14 @@
   ],
   "description": "UI for JAvascript Suite for Sparql Access",
   "main": [
-    "jassa-ui-angular-openlayers-tpls.js",
-    "jassa-ui-angular-openlayers.css"
+    "jassa-ui-angular-openlayers-tpls.js"
   ],
   "dependencies": {
     "jquery-ui": "1.10.3",
     "openlayers": "release-2.13.1",
     "angular": "1.3.5-build.3630+sha.30694c8",
-    "jassa": "0.9.0-SNAPSHOT"
+    "jassa": "0.9.0-SNAPSHOT",
+    "underscore": "1.7.0"
   },
   "keywords": [
     "rdf",
