--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "openlayers": "release-2.13.1",
     "angular": "1.3.5-build.3630+sha.30694c8",
     "jassa": "0.9.0-SNAPSHOT",
-    "underscore": "1.7.0"
+    "underscore": "1.7.0",
+    "bootstrap": "3.1.0",
   },
   "keywords": [
     "rdf",
