--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "jquery-ui": "1.10.3",
     "openlayers": "https://github.com/openlayers/ol2.git#release-2.13.1",
-    "angular": "1.3.5-build.3630+sha.30694c8",
+    "angular": "1.3.5",
     "dddi-angular": "1.0.0",
     "jassa": "0.9.0-SNAPSHOT",
     "underscore": "1.7.0",
